# bootcamp-Coding-The-Future-Squadio-Python-Data-Analytics

./: README.md  pyproject.toml
DCs/: Desafios-de-Codigo.ipynb  README.md
DCs/codigos/: execicio_iniciante_01.py  execicio_iniciante_02.py  execicio_iniciante_03.py  execicio_intermediarioII_01.py  execicio_intermediarioII_02.py  execicio_intermediarioII_03.py  execicio_intermediario_01.py  execicio_intermediario_02.py  execicio_intermediario_03.py
DP2/: README.md
DP2/src/: Desafio - Pipeline de ETL com Python.ipynb  Desafio-Pipeline-ETL-Python.py  desafio_report_powerbi.ipynb
DP3/: README.md
DP3/src/: desafio_report.pbix  desafio_report_powerbi.ipynb
